What's new, what's been changed, what's been fixed
--------------------------------------------------

***********
* v1.6.3b *
***********

Current working revision.


- v1.6.3b -
-----------

(b) June 12th, 2004.
(a) June 11th, 2004.

Changes:
(a) Added sqrt(3) factor to the Langevin thermostat for re-entering the integrator
    (only if 'recalc_forces' is set as well, e.g. because a bond was removed, 
    the box rescaled or just the forcecap changed). 
    This is necessary since otherwise the temperature drops with the rate of 
    force recalculations due to missing correlations while drawing random numbers.

Bugfixes:
(b) Fixed typo in array index causing nptiso.p_vel to be accidentially overwritten
    while deriving virials in 'add_bonded_virials'.


- v1.6.2d -
-----------

(d) June 11th, 2004.
(c) June 10th, 2004.
(b) June  9th, 2004.
(a) June  8th, 2004.

New Features:
(b) Added new analysis routine 'analyze p_inst' which does exactly the same as
    'analyze pressure' but compensates for the difference in the ideal component
    between 'analyze pressure' and 'setmd npt_p_inst', hence more accurately displaying
    the contributions to the instantaneous pressure while using NpT.
    Note that you may use this function in both NpT- and NVT-ensembles, but be aware
    that since it is reverting the last half timestep in the velocity propagation,
    extra care is required to make sure that such a thing is valid upon execution.
(b) Added new global variable 'setmd npt_p_inst_av' which displays the instantaneous
    pressure of the NpT-integrator averaged over the last integration cycle.
(a) Added flag to 'checkpoint_read <source> [<read_all>]' so that you don't have to 
    read all checkpoints but can just read the last one.

Changes:
(d) Reverted 'add_non_bonded_virials'-calculation of the short range coulombic pressure
    contribution to former potential term, but now nptiso.p_vir is also using it